repos/test-emily-game/contents/sample/test/macro/fail/unknown.em
# Statements to test macros -- Unprocessed symbol
# Expect failure

☠☠☠